[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "talocode-searchlane"
version = "0.1.0"
description = "Agent web search & research API — structured query, news, and multi-source research with citations"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Talocode"}]
keywords = ["search", "agent-search", "research", "web-search", "talocode", "agents"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/talocode/searchlane"
Documentation = "https://docs.talocode.site"
PyPI = "https://pypi.org/project/talocode-searchlane/"

[project.scripts]
searchlane = "searchlane.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["searchlane*"]
